--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -14,10 +14,11 @@
       <%= b.label %>
     </p>
   <% end %>
-
+  
   <p>
      <%= form.submit t('actions.next') %> |
      <%= link_to t('actions.back'), tests_path %> |
+     <%= link_to t('actions.gist_question'), gist_test_passage_path(@test_passage), method: :post %> |
   </p>
 
 <% end %>
