--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,12 +1,14 @@
 
-<h1><%= t('.header', title: @test_passage.test.title) %></h1>
-<p><%= t('.score', user: current_user.email) %> 
+<h1><%= t('.header', user: current_user.email, title: @test_passage.test.title) %></h1>
+<p><%= t('.score') %>
 <% if @test_passage.success? %>
-  <span class="color_green"><%= @test_passage.correct_answers_count %>
-  </span><%= t('.success') %></p>
+    <span class="color_green"><%= @test_passage.correct_answers_count %> </span>
+    <p class="color_green"><%= t('.success') %></p>
+  </p>
 <% else %>
-  <span class="color_red"><%= @test_passage.correct_answers_count %>
-  </span> <%= t('.fail') %></p>
+    <span class="color_red"><%= @test_passage.correct_answers_count %> </span> 
+  </p>
+  <p class="color_red"><%= t('.fail') %></p>
 <% end %>
 
 <%= link_to t('.back'), tests_path %>
