--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,10 +1,16 @@
 <h2><%= t('.header', title: @test_passage.test.title) %></h2>
+
+<p>
+  
+</p>
+
 <p>
   <%= t('.question',
   current_question: @test_passage.current_question_number, 
-  all_questions: @test_passage.test.questions.count) %>
+  all_questions: @test_passage.test.questions.count)%> -
+  <%= link_to t('actions.gist_question'), gists_path(@test_passage), method: :post %>
 </p>
-</br>
+
 <b><%= @test_passage.current_question.body %></b>
 
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
@@ -16,9 +22,8 @@
   <% end %>
   
   <p>
-     <%= form.submit t('actions.next') %> |
      <%= link_to t('actions.back'), tests_path %> |
-     <%= link_to t('actions.gist_question'), gist_test_passage_path(@test_passage), method: :post %> |
+     <%= form.submit t('actions.next') %> 
   </p>
 
 <% end %>
