--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,11 +1,16 @@
 <div class="row justify-content-center">
   <div class="col col-md-4">
-    <table>
-      <tr style="text-align:center" colspan="4" ><%= t('.header')%></tr>
-      <tr>
-      <th colspan="4"><%= link_to t('actions.new_test'), new_admin_test_path %></th>
-      </tr>
-      <tr>
+    <table class="table table-hover">
+      <thead class="table-dark">
+        <tr style="text-align:center">
+          <th colspan="2"><%= link_to t('actions.new_test'), new_admin_test_path %></th>
+          <th colspan="2"><%= link_to t('actions.gist_questions'), admin_gists_path %></th> 
+        </tr>
+        <tr style="text-align:center">
+          <th colspan="4" ><%= t('.header')%></th>
+        </tr>
+      </thead>
+      <tr style="text-align:center" >
       <th><%= t('.title') %></th>
       <th colspan="3" ><%= t('actions.actions') %></th>
       </tr>
