--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -8,7 +8,7 @@
   <%= t('.question',
   current_question: @test_passage.current_question_number, 
   all_questions: @test_passage.test.questions.count)%> -
-  <%= link_to t('actions.gist_question'), gists_path(@test_passage), method: :post%>
+  <%= link_to t('actions.gist_question'), test_passage_gists_path(@test_passage), method: :post%>
 </p>
 
 <b><%= @test_passage.current_question.body %></b>
