--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -11,7 +11,11 @@
         </tr>
       </thead>
       <tr style="text-align:center" >
-      <th><%= t('.title') %></th>
+      <th class="sort-by-title pointer">
+      <%= t('.title') %>
+      <%= octicon 'arrow-up', class:'text-success hide' %>
+      <%= octicon 'arrow-down', class:'text-success hide' %>
+      </th>
       <th colspan="3" ><%= t('actions.actions') %></th>
       </tr>
       <%= render @tests %>
