--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col col-md-4">
-    <table class="table table-hover">
+    <table class="table">
       <thead class="table-dark">
         <tr style="text-align:center">
           <th colspan="2"><%= link_to t('actions.new_test'), new_admin_test_path %></th>
@@ -11,12 +11,12 @@
         </tr>
       </thead>
       <tr style="text-align:center" >
-      <th class="sort-by-title pointer">
-      <%= t('.title') %>
-      <%= octicon 'arrow-up', class:'text-success hide' %>
-      <%= octicon 'arrow-down', class:'text-success hide' %>
-      </th>
-      <th colspan="3" ><%= t('actions.actions') %></th>
+        <th class="sort-by-title pointer">
+          <%= t('.title') %>
+          <%= octicon 'arrow-up', class:'text-success hide' %>
+          <%= octicon 'arrow-down', class:'text-success hide' %>
+        </th>
+        <th colspan="3" ><%= t('actions.actions') %></th>
       </tr>
       <%= render @tests %>
     </table>
