--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
   <div class="col col-md-4">
-    <table class="table">
-      <thead class="table-dark">
+    <table class="table table-hover">
+      <thead class="table-bordered">
         <tr style="text-align:center">
           <th colspan="2"><%= link_to t('actions.new_test'), new_admin_test_path %></th>
           <th colspan="2"><%= link_to t('actions.gist_questions'), admin_gists_path %></th> 
