--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,3 @@
 <%= flash.each do |type, message| %>
-  <%= content_tag :p, message, class: "flash #{type}" if message.present?  %>
+  <%= content_tag :div, message, class: "flash #{type}" if message.present?  %>
 <% end %>
