--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,3 +1,4 @@
+<% if test.questions.present?%>
 <tr style="text-align:center">
     <td> <strong><%= test.title %></strong> </br>
       <span style="font-size:12px">
@@ -6,3 +7,4 @@
     </td>
     <td  ><%= button_to t('actions.start'), start_test_path(test) %> </td> 
   </tr>
+<% end %>
