--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,4 +1,9 @@
 <div class="row justify-content-center">
+
+  <!-- <p>
+    [ <%= link_to t('actions.feedback'), new_admin_test_path %> ]
+  </p> -->
+
   <div class="col col-md-4">
     <table class="table table-hover">
         <tr style="text-align:center">
